# Resizer

./: .gitignore  README.md  WindowPositioner.spec  config.ini  config.json  config_FFXIV.ini  config_Infinity_Nikki.ini  config_Last_Epoch.ini  config_Nikki.ini  config_ZenlessZoneZero.ini  config_example 2.ini  config_manager.py  constants.py  custom_widgets.py  gui_manager.py  layout.py  main.py  pyproject.toml  requirements.txt  utils.py  window_manager.py
lib/: asset_manager.py  config_manager.py  constants.py  custom_widgets.py  layout.py  utils.py  window_manager.py
resizer_renew/: config.json  main.py
