[project]
name = "WindowPositioner"
version = "0.3.0"
description = "Will let you control size, position, always-on-top and can remove titlebar for windowed applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygetwindow>=0.0.9",
    "pywin32>=310",
    "toga>=0.5.1",
]
